[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kohler"
version = "0.1.0"
description = "Kohler DTV+ Python API module"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.14"
authors = [
    { name = "Blake Niemyjski", email = "bniemyjski@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/niemyjski/kohler-python"
Repository = "https://github.com/niemyjski/kohler-python"
Issues = "https://github.com/niemyjski/kohler-python/issues"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.ruff.lint.isort]
known-first-party = ["kohler"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "TC003"]
